# NeuralRecon

./: .gitignore  setup.cfg
examples/: demo.py  train.py
neuralrecon/: __init__.py  utils.py
neuralrecon/datasets/: __init__.py  demo.py  transforms.py
neuralrecon/models/: backbone.py  gru_fusion.py  neucon_network.py  neuralrecon.py
neuralrecon/ops/: back_project.py  generate_grids.py
neuralrecon/tools/: evaluation.py  process_arkit_data.py
