
# More information for packaging and distributing project can be found
# here: https://packaging.python.org/tutorials/packaging-projects/
[metadata]
name = neuralrecon
version = 0.0.1
author = Jiaming Sun
author_email = suenjiaming@gmail.com
url = https://github.com/zju3dv/NeuralRecon
description = NeuralRecon: Real-Time Coherent 3D Reconstruction from Monocular Video
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GENERAL Public License
platform = any
keywords = 3d reconstruction, monocular, real-time, neural network
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/zju3dv/NeuralRecon/issues
    #Changelog = https://github.com/zju3dv/NeuralRecon/blob/master/CHANGELOG.md

[options]
# Make sure to use find: to include subpackages!
packages = find:
include_package_data = true
python_requires = >= 3.6
test_suite = tests
setup_requires = 
    setuptools
install_requires = 
    torch >= 1.6.0
    pyrender >= 0.1.45
    opencv-python >= 3.3.0.10
    tqdm >= 4.18.0
    matplotlib >= 3.5.0
    # open3d >= 0.12.0
    pyglet >= 1.5.20
    loguru >= 0.5.0
    h5py >= 3.5.0
    yacs >= 0.1.6
    trimesh >= 3.12.0
    pycuda >= 2020.1
    ray >= 1.10.0
    transforms3d >= 0.3
    scikit-image >= 0.19.0
    # "torchsparse git+https://github.com/mit-han-lab/torchsparse.git"

[options.package_data]
* = *.png, *.jpg, *.qml

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
# Google conventions
ignore = D200, D203, D213, D406, D407   
    
[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
